--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,21 @@
   </head>
   <body>
     <aside id="sidebar">
-      {% if page.toc %}
-        <h2>Table of Contents</h2>
-        <ul id="toc">
-          {% for item in page.toc %}
-            <li><a href="#{{ item.anchor }}">{{ item.text }}</a></li>
+      <h2>Table of Contents</h2>
+      <ul id="toc">
+        {% if page.content contains '<h1>' %}
+          {% assign headings = page.content | split: '<h1>' %}
+          {% for heading in headings offset: 1 %}
+            {% assign h1 = heading | split: '</h1>' | first %}
+            <li><a href="#{{ h1 | replace: ' ', '-' | downcase }}">{{ h1 }}</a></li>
+            {% assign subheadings = heading | split: '<h2>' %}
+            {% for subheading in subheadings offset: 1 %}
+              {% assign h2 = subheading | split: '</h2>' | first %}
+              <li style="margin-left: 20px"><a href="#{{ h2 | replace: ' ', '-' | downcase }}">{{ h2 }}</a></li>
+            {% endfor %}
           {% endfor %}
-        </ul>
-      {% endif %}
+        {% endif %}
+      </ul>
     </aside>
     <section id="main-content">
       {{ content }}
